# lxc

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  CODING_STYLE.md  CONTRIBUTING  COPYING  ChangeLog  INSTALL  MAINTAINERS  Makefile  Makefile.am  README  README.md  TODO  Vagrantfile  autogen.sh  bootstrap  configure.ac  configure.in  lxc.pc.in  lxc.spec.in  meson.build  meson_options.txt  release.sh  runapitests.bash  runapitests.sh  sync-lxc-main-to-my-fork.sh
config/: .cvsignore  Makefile.am  acinclude.m4  attributes.m4  linux.m4  lxc.conf.libvirt  lxc.conf.ubuntu  lxc.conf.unknown  tls.m4
config/apparmor/: Makefile.am  README  container-rules  container-rules.base  lxc-containers  lxc-generate-aa-rules.py  meson.build  usr.bin.lxc-copy  usr.bin.lxc-start
config/bash/: Makefile.am  _lxc.in  lxc.in  meson.build
config/etc/: Makefile.am  default.conf.libvirt  default.conf.lxcbr  default.conf.unknown  meson.build
config/init/: Makefile.am
config/selinux/: Makefile.am  lxc.if  lxc.te  meson.build
config/sysconfig/: Makefile.am  lxc.in  meson.build
config/templates/: Makefile.am  alpine.common.conf.in  alpine.userns.conf.in  archlinux.common.conf.in  archlinux.userns.conf.in  centos.common.conf.in  centos.userns.conf.in  common.conf.in  common.seccomp  debian.common.conf.in  debian.userns.conf.in  fedora.common.conf.in  fedora.userns.conf.in  gentoo.common.conf.in  gentoo.moresecure.conf.in  gentoo.userns.conf.in  kali.common.conf.in  meson.build  nesting.conf.in  oci.common.conf.in  opensuse.common.conf.in  openwrt.common.conf.in  oracle.common.conf.in  oracle.userns.conf.in  plamo.common.conf.in  plamo.userns.conf.in  sabayon.common.conf.in  slackware.common.conf.in  ubuntu-cloud.common.conf.in  ubuntu-cloud.lucid.conf.in  ubuntu-cloud.userns.conf.in  ubuntu.common.conf.in  ubuntu.lucid.conf.in  ubuntu.priv.seccomp  ubuntu.userns.conf.in  userns.conf.in  voidlinux.common.conf.in  voidlinux.userns.conf.in
config/yum/: Makefile.am  lxc-patch.py  meson.build
doc/: .cvsignore  FAQ.txt  Makefile.am  api-extensions.md  common_options.sgml.in  fstab  lxc-attach.sgml.in  lxc-autostart.sgml.in  lxc-cgroup.sgml.in  lxc-checkconfig.sgml.in  lxc-checkpoint.sgml.in  lxc-clone.sgml.in  lxc-config.sgml.in  lxc-console.sgml.in  lxc-copy.sgml.in  lxc-create.sgml.in  lxc-destroy.sgml.in  lxc-device.sgml.in  lxc-execute.sgml.in  lxc-freeze.sgml.in  lxc-info.sgml.in  lxc-kill.sgml.in  lxc-ls.sgml.in  lxc-monitor.sgml.in  lxc-netstat.sgml.in  lxc-ps.sgml.in  lxc-restart.sgml.in  lxc-shutdown.sgml.in  lxc-snapshot.sgml.in  lxc-start-ephemeral.sgml.in  lxc-start.sgml.in  lxc-stop.sgml.in  lxc-top.sgml.in  lxc-unfreeze.sgml.in  lxc-unshare.sgml.in  lxc-update-config.sgml.in  lxc-user-nic.sgml.in  lxc-usernet.sgml.in  lxc-usernsexec.sgml.in  lxc-version.sgml.in  (+11 more)
doc/api/: Doxyfile  Makefile.am
doc/examples/: Makefile.am  lxc-complex-config.in  lxc-complex.conf.in  lxc-empty-netns.conf.in  lxc-macvlan.conf.in  lxc-no-netns.conf.in  lxc-phys.conf.in  lxc-veth.conf.in  lxc-vlan.conf.in  meson.build  ovs.sh  seccomp-v1.conf  seccomp-v2-blacklist.conf  seccomp-v2-denylist.conf  seccomp-v2.conf
doc/ja/: Makefile.am  common_options.sgml.in  lxc-attach.sgml.in  lxc-autostart.sgml.in  lxc-cgroup.sgml.in  lxc-checkconfig.sgml.in  lxc-checkpoint.sgml.in  lxc-clone.sgml.in  lxc-config.sgml.in  lxc-console.sgml.in  lxc-copy.sgml.in  lxc-create.sgml.in  lxc-destroy.sgml.in  lxc-device.sgml.in  lxc-execute.sgml.in  lxc-freeze.sgml.in  lxc-info.sgml.in  lxc-kill.sgml.in  lxc-ls.sgml.in  lxc-monitor.sgml.in  lxc-netstat.sgml.in  lxc-ps.sgml.in  lxc-restart.sgml.in  lxc-shutdown.sgml.in  lxc-snapshot.sgml.in  lxc-start-ephemeral.sgml.in  lxc-start.sgml.in  lxc-stop.sgml.in  lxc-top.sgml.in  lxc-unfreeze.sgml.in  lxc-unshare.sgml.in  lxc-update-config.sgml.in  lxc-user-nic.sgml.in  lxc-usernet.sgml.in  lxc-usernsexec.sgml.in  lxc-version.sgml.in  lxc-wait.sgml.in  lxc.conf.sgml.in  lxc.container.conf.sgml.in  lxc.sgml.in  (+4 more)
doc/ko/: Makefile.am  common_options.sgml.in  lxc-attach.sgml.in  lxc-autostart.sgml.in  lxc-cgroup.sgml.in  lxc-checkconfig.sgml.in  lxc-checkpoint.sgml.in  lxc-clone.sgml.in  lxc-config.sgml.in  lxc-console.sgml.in  lxc-copy.sgml.in  lxc-create.sgml.in  lxc-destroy.sgml.in  lxc-device.sgml.in  lxc-execute.sgml.in  lxc-freeze.sgml.in  lxc-info.sgml.in  lxc-ls.sgml.in  lxc-monitor.sgml.in  lxc-snapshot.sgml.in  lxc-start-ephemeral.sgml.in  lxc-start.sgml.in  lxc-stop.sgml.in  lxc-top.sgml.in  lxc-unfreeze.sgml.in  lxc-unshare.sgml.in  lxc-user-nic.sgml.in  lxc-usernet.sgml.in  lxc-usernsexec.sgml.in  lxc-wait.sgml.in  lxc.conf.sgml.in  lxc.container.conf.sgml.in  lxc.sgml.in  lxc.system.conf.sgml.in  meson.build  see_also.sgml.in
doc/legacy/: lxc-ls.sgml.in
doc/rootfs/: Makefile.am  README  meson.build
etc/: .cvsignore  Makefile.am  lxc-complex-config.in  lxc-veth.conf.in
hooks/: Makefile.am  clonehostname  dhclient  dhclient-script  dhclient-start.in  dhclient-stop.in  dhclient.in  meson.build  mountcgroups  mountecryptfsroot  nvidia  squid-deb-proxy-client  ubuntu-cloud-prep  unmount-namespace.c
src/include/: bpf.h  fexecve.c  fexecve.h  getgrgid_r.c  getgrgid_r.h  getline.c  getline.h  getsubopt.h  ifaddrs.c  ifaddrs.h  (+17 more)
templates/: Makefile.am  README.md  lxc-alpine.in  lxc-altlinux.in  lxc-archlinux.in  lxc-busybox.in  lxc-centos.in  lxc-cirros.in  lxc-debian.in  lxc-download.in  lxc-fedora-cloud.in  lxc-fedora-legacy.in  lxc-fedora.in  lxc-gentoo.in  lxc-kali.in  lxc-lenny.in  lxc-local.in  lxc-lucid.in  lxc-maverick.in  lxc-natty.in  lxc-oci.in  lxc-oneiric.in  lxc-openmandriva.in  lxc-opensuse.in  lxc-oracle.in  lxc-pentoo.in  lxc-plamo.in  lxc-pld.in  lxc-sabayon.in  lxc-slackware.in  lxc-sparclinux.in  lxc-spike-pentesting.in  lxc-sshd.in  lxc-ubuntu  lxc-ubuntu-cloud.in  lxc-ubuntu.in  lxc-voidlinux.in  meson.build
test/: .cvsignore  Makefile.am  conf.c  confile.c  dev.c  forward.c  ipv4_add.c  ipv6_add.c  lxc_create.c  lxc_destroy.c  lxc_low_monitor.c  lxc_monitor.c  lxc_start.c  lxc_state.c  lxc_stop.c  macvlan.c  movedev.c  proxy.c  tst_list.c  veth.c
(+536 files in other folders)
